removed unncessary test configurations